simple-cluster/lets-encrypt/hello-ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.5
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
spec:
  # use ClusterIP with ingress
  type: ClusterIP
  ports:
  # service listens on http (80)
  - port: 80
    # sends to a pod on port 8080
    targetPort: 8080
  selector:
    app: hello-kubernetes
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-v1beta1
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    cert-manager.io/acme-challenge-type: dns01    
spec:
  tls:
    - hosts:
        - 'dfDns'
        - '*.dfDns'
      secretName: acme-route53
  rules:
    # it's necessary to create this subdomain inside the Route53
    - host: hello.dfDns
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-kubernetes
              servicePort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-v1
  annotations:
#    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - 'dfDns'
        - '*.dfDns'
      secretName: acme-route53
  ingressClassName: nginx
  rules:
    - host: hello2.dfDns
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-kubernetes
                port:
                  number: 80
